gccida/g1/check_insn_for_givs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5769:4: error: expected ';' after expression
rtx v13; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5769:5: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx v13; // rax 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5768:5: note: 'v12' declared here
int v12; // eax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5770:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5770:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5781:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+8h] [rbp-70h] 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5781:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+8h] [rbp-70h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5783:4: error: expected ';' after expression
rtx src_reg; // [rsp+18h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5783:5: error: use of undeclared identifier 'src_reg'
rtx src_reg; // [rsp+18h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5784:4: error: expected ';' after expression
rtx add_val; // [rsp+20h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5784:5: error: use of undeclared identifier 'add_val'
rtx add_val; // [rsp+20h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5785:4: error: expected ';' after expression
rtx mult_val; // [rsp+28h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5785:5: error: use of undeclared identifier 'mult_val'
rtx mult_val; // [rsp+28h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5786:4: error: expected ';' after expression
rtx ext_val; // [rsp+30h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5786:5: error: use of undeclared identifier 'ext_val'
rtx ext_val; // [rsp+30h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5787:4: error: expected ';' after expression
rtx last_consec_insn[8]; // [rsp+38h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5787:5: error: use of undeclared identifier 'last_consec_insn'; did you mean 'skip_consec_insns'?
rtx last_consec_insn[8]; // [rsp+38h] [rbp-40h] BYREF 
    ^~~~~~~~~~~~~~~~
    skip_consec_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:1339:1: note: 'skip_consec_insns' declared here
skip_consec_insns (insn, count)
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5787:5: error: subscript of pointer to function type 'rtx ()' (aka 'struct rtx_def *()')
rtx last_consec_insn[8]; // [rsp+38h] [rbp-40h] BYREF 
    ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5795:12: error: expected ';' after expression
v9 = ( rtx)p[2]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/loop.c:5802:30: error: expected expression
find_mem_givs( loop, *( rtx *)&v4[2], v4, not_every_iteration, maybe_multiple); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/check_insn_for_givs/src/obj/loop.o] Error 1
